--- a/instagram/pubspec.yaml
+++ b/instagram/pubspec.yaml
@@ -66,7 +66,10 @@ flutter:
       - assets/meta.png
       - assets/dp.png
       - assets/follower.png
-      - assets/posts/post_one.jpg
+      - assets/posts/post_1.jpg
+      - assets/posts/post_2.jpg
+      - assets/posts/post_3.jpg
+      - assets/posts/post_4.jpg
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
