--- a/food_donation/pubspec.yaml
+++ b/food_donation/pubspec.yaml
@@ -61,7 +61,18 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-      - assets/app_logo.png
+    - assets/app_logo.png
+    - assets/apple.png
+    - assets/avocado.png
+    - assets/banana.png
+    - assets/cabbage.png
+    - assets/carrot.png
+    - assets/milk.png
+    - assets/orange.png
+    - assets/potato.png
+    - assets/watermelon.png
+    - assets/user_profile.png
+    - assets/followers.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
